|==================|

Gepi-master (Version de développement)
===========================
Librairies:
- Ajout de PHPMailer (https://github.com/PHPMailer/PHPMailer)

Abs2:
- Possibilité d'associer automatiquement des saisies (saisir_groupe.php) à un traitement englobant.

Bulletins:
- Possibilité de définir un autre préfixe que "Bulletin du " précédant le nom de période pour les bulletins.

Divers:
- Possibilité de paramétrer classe par classe la dénomination du professeur chargé
  du suivi des élèves d'une classe ("professeur principal" par défaut).

Gepi-1.6.6 (18/01/2015)
===========================
Librairies :
- HTMLPurifier : Mise à jour en 4.6.0

Abs2
- Sélection des traitements sur la classe dans liste_traitements.php et liste_notifications.php
- Possibilité d'inclure l'identité et l'adresse du responsable légal 1 dans les exports ODT/ODS de l'onglet Bilan individuel.

Absences et remplacements de professeurs
- Ajout d'un module de saisie d'absences de professeurs avec possibilité de
  proposer des remplacements aux professeurs qui n'ont pas cours sur un créneau libéré.

Bulletins:
- Vérification de remplissage des bulletins: Possibilité de définir son propre
  modèle de texte pour les mails alertant les professeurs que des appréciations
  ou moyennes sont manquantes.
  Possibilité d'y prendre en compte la date de conseil de classe définie dans
  la page Dates événements classes.
- Possibilité de modifier la largeur du tableau et des colonnes du bulletin simplifié.

Edt:
- Dispositif d'import de fichiers ICAL/ICS pour remplir un Emploi du temps dans Gepi
  (dispositif alternatif, non lié à l'EDT classique de Gepi).
- Possibilité d'importer l'emploi du temps depuis l'export EXP_COURS.xml d'EDT.
- Possibilité de mettre à jour les inscriptions d'élèves dans des groupes Gepi d'après l'export EXP_ELEVES.xml d'EDT.

Discipline:
- Affichage d'un témoin d'incident/sanctions pour les élèves/parents.